bargraph now works with chart div

--- a/svg_barchart/index.html
+++ b/svg_barchart/index.html
@@ -18,7 +18,7 @@
 
   <div class="container">
     <h2>D3 Graphic</h2>
-    <svg id="chart"></div>
+    <div id="chart"></div>
   </div>
   <script src="_/d3.min.js"></script>
   <script src="script.js"></script>
